--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
-    "name": "namoshek/laravel-redis-sentinel",
-    "description": "An extension of Laravels Redis driver which supports connecting to a Redis master through Redis Sentinel.",
+    "name": "teltonikadev/laravel-redis-sentinel",
+    "description": "Fork of an extension of Laravels Redis driver which supports connecting to a Redis master through Redis Sentinel.",
     "keywords": [
         "laravel",
         "redis"
     ],
-    "homepage": "https://github.com/Namoshek/laravel-redis-sentinel",
     "license": "MIT",
     "authors": [
         {
